--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.kaizensundays.particles</groupId>
     <artifactId>fusion</artifactId>
+    <name>IgniteLab</name>
     <version>0.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
