--- a/fusion-mu/pom.xml
+++ b/fusion-mu/pom.xml
@@ -85,6 +85,12 @@
             <artifactId>h2</artifactId>
         </dependency>
 
+        <!-- ArchUnit -->
+        <dependency>
+            <groupId>com.tngtech.archunit</groupId>
+            <artifactId>archunit</artifactId>
+        </dependency>
+
     </dependencies>
 
     <properties>
