--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,13 @@
                 <version>5.4.0</version>
             </dependency>
 
+            <!-- ArchUnit -->
+            <dependency>
+                <groupId>com.tngtech.archunit</groupId>
+                <artifactId>archunit</artifactId>
+                <version>1.3.1</version>
+            </dependency>
+
             <!-- Spring -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
