--- a/fusion-mu/src/main/resources/application.properties
+++ b/fusion-mu/src/main/resources/application.properties
@@ -10,4 +10,4 @@ journal.h2DatabaseName=journal
 journal.h2User=
 journal.h2Password=
 
-cluster.quorum=2
+node.tcpDiscoveryAddresses=localhost:47701..47705
