[ IgniteLab ] flights.yml

--- a/fusion-mu/docker/node.yaml
+++ b/fusion-mu/docker/node.yaml
@@ -2,6 +2,9 @@ cluster:
   quorum: 2
 
 node:
+  kubeEnabled: true
+  kubeNamespace: default
+  kubeServiceName: flights
   tcpDiscoveryAddresses:
     - flights-0.flights.default.svc.cluster.local:47701..47705
     - flights-1.flights.default.svc.cluster.local:47701..47705
