--- a/fusion-mu/pom.xml
+++ b/fusion-mu/pom.xml
@@ -81,6 +81,10 @@
             <artifactId>ignite-spring</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.ignite</groupId>
+            <artifactId>ignite-kubernetes</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
         </dependency>
