--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,11 @@
                 <artifactId>ignite-indexing</artifactId>
                 <version>${ignite.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.ignite</groupId>
+                <artifactId>ignite-kubernetes</artifactId>
+                <version>${ignite.version}</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
