--- a/flights-messages/pom.xml
+++ b/flights-messages/pom.xml
@@ -7,7 +7,7 @@
         <artifactId>fusion</artifactId>
         <version>0.0.0-SNAPSHOT</version>
     </parent>
-    <artifactId>lab-messaging</artifactId>
+    <artifactId>flights-messages</artifactId>
 
     <dependencies>
 
