--- a/fusion-mu/src/test/resources/application-test.properties
+++ b/fusion-mu/src/test/resources/application-test.properties
@@ -3,3 +3,15 @@ journal.h2Path=./target/.h2
 journal.h2DatabaseName=journal
 journal.h2User=
 journal.h2Password=
+
+spring.datasource.url=jdbc:postgresql://PgSql:30432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create-only
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+debug=true
