--- a/fusion-mu/src/main/resources/application.properties
+++ b/fusion-mu/src/main/resources/application.properties
@@ -10,4 +10,14 @@ journal.h2DatabaseName=journal
 journal.h2User=
 journal.h2Password=
 
+spring.datasource.url=jdbc:postgresql://PgSql:30432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
 node.tcpDiscoveryAddresses=localhost:47701..47705
