--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,8 @@
     </properties>
 
     <modules>
+        <module>flights-eureka</module>
         <module>flights-messages</module>
-        <module>fusion-eureka</module>
         <module>flights-service</module>
     </modules>
 
