--- a/flights-eureka/pom.xml
+++ b/flights-eureka/pom.xml
@@ -7,7 +7,7 @@
         <artifactId>fusion</artifactId>
         <version>0.0.0-SNAPSHOT</version>
     </parent>
-    <artifactId>fusion-eureka</artifactId>
+    <artifactId>flights-eureka</artifactId>
 
     <dependencies>
 
