--- a/flights-eureka/pom.xml
+++ b/flights-eureka/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.kaizensundays.particles</groupId>
-        <artifactId>fusion</artifactId>
+        <artifactId>flights</artifactId>
         <version>0.0.0-SNAPSHOT</version>
     </parent>
     <artifactId>flights-eureka</artifactId>
