--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.kaizensundays.particles</groupId>
-    <artifactId>fusion</artifactId>
+    <artifactId>flights</artifactId>
     <name>IgniteLab</name>
     <version>0.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
