--- a/flights-eureka/pom.xml
+++ b/flights-eureka/pom.xml
@@ -3,7 +3,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.kaizensundays.particles</groupId>
+        <groupId>com.kaizensundays.ignitelab</groupId>
         <artifactId>flights</artifactId>
         <version>0.0.0-SNAPSHOT</version>
     </parent>
