--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.kaizensundays.particles</groupId>
+    <groupId>com.kaizensundays.ignitelab</groupId>
     <artifactId>flights</artifactId>
     <name>IgniteLab</name>
     <version>0.0.0-SNAPSHOT</version>
